# FMRecord

./: settings.gradle
adnroid_recordd/: CMakeLists.txt  build.gradle
adnroid_recordd/src/androidTest/java/com/khmer/fm/adnroid_recordd/: ExampleInstrumentedTest.java
adnroid_recordd/src/main/: AndroidManifest.xml
adnroid_recordd/src/main/cpp/: audio_player.c  ffmpeg_cmd.c  native-lib.cpp  video_player.c
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/: Constants.java  RNActivity.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/eventbus/: BgMusicBackEvent.java  EditTextEventbus.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/ffmpeg/: FFmpegCmd.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/record/: AudioMediaPlayer.java  AudioTrackPlayer.java  EditTextActivity.java  HeadSetReceiver.java  RecordActivity.java  TestAudioPlayer.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/record/bean/: BgMusicBean.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/record/mix/: BgMusicProcessor.java  ByteRingBuffer.java  MixError.java  MixManager.java  MixParams.java  MixUtils.java  RecordSaveUtils.java  RecordVolumeListener.java  VRecorder.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/record/rn/: RecordModule.java  RecordReactPackage.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/record/view/: BgMusicView.java  LyricView.java
adnroid_recordd/src/main/java/com/khmer/fm/adnroid_recordd/utils/: AudioUtils.java  ConstomDialog.java  TimeUtils.java
adnroid_recordd/src/main/res/drawable/: dialog_bg.xml  record_time_bg.xml
adnroid_recordd/src/main/res/layout/: activity_edit_text.xml  activity_record.xml  dialog_layout.xml
adnroid_recordd/src/main/res/values/: colors.xml  strings.xml  styles.xml
adnroid_recordd/src/test/java/com/khmer/fm/adnroid_recordd/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/khmer/fm/fmdemotomodel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/khmer/fm/fmdemotomodel/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/khmer/fm/fmdemotomodel/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
